CIVUP-34: Fix z-index of drop-shadow on contribution dashboard tabs.

--- a/scss/civicrm/contact/pages/_contributions.scss
+++ b/scss/civicrm/contact/pages/_contributions.scss
@@ -1465,6 +1465,7 @@ form.CRM_Contribute_Form_ContributionCharts {
 
   .ui-tabs {
     border-radius: 0 0 $border-radius-base $border-radius-base;
+    position: relative;
 
     &:before {
       border-radius: 0 0 $border-radius-base $border-radius-base;
@@ -1475,6 +1476,7 @@ form.CRM_Contribute_Form_ContributionCharts {
       position: absolute;
       top: 0;
       width: 100%;
+      z-index: -1;
     }
   }
 
